[tool.poetry]
name = "data_analysis_with_pandas"
version = "0.1.0"
description = ""
authors = ["Prabin Singh <pravin544@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
jupyterlab = "^3.0.16"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
